<resources>
    <string name="ChangeKey">Change Key</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="GetKey">Get Key</string>
    <string name="Init">INIT</string>
    <string name="MatchISO">MATCH ISO</string>
    <string name="MatchMinutiaeISO">MATCH Minutiae ISO</string>
    <string name="ReadBit">Read Bit</string>
    <string name="Rs">₹</string>
    <string name="StopSyncCapture">STOP CAP</string>
    <string name="SyncCapture">CAPTURE</string>
    <string name="UnInit">UNINIT</string>
    <string name="WriteBit">Write Bit</string>
    <string name="_1234567890">1234567890</string>
    <string name="_6">6</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="aadhaar_enabled_payment_system">Aadhaar Enabled Payment System</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="aadhaar_rg">AADHAAR</string>
    <string name="aadhar_no">Aadhar No</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc">Account no</string>
    <string name="account">Account</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_holder">Account Holder</string>
    <string name="account_holder_name">Account holder name</string>
    <string name="account_no">ACCOUNT NO:</string>
    <string name="account_number">Account number</string>
    <string name="account_number__">Account Number</string>
    <string name="acknowledge_no">Acknowledge No:</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_settings">Settings</string>
    <string name="activity">Activity</string>
    <string name="add">Add</string>
    <string name="add_bank">Add Bank</string>
    <string name="add_dmt_user">Add DMT User</string>
    <string name="add_fund">Add Fund</string>
    <string name="add_recipient_bank_account">ADD BENEFICIARY</string>
    <string name="add_user">Add User</string>
    <string name="add_wallet">Add Wallet</string>
    <string name="address">Address</string>
    <string name="ae_ps">AePS</string>
    <string name="aeps">AEPS :</string>
    <string name="aeps_balance">AePS Balance</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="all_contacts">All Contacts</string>
    <string name="alternate_mobile">Alternate Mobile</string>
    <string name="amount">Amount</string>
    <string name="amount_balance">Amount Balance</string>
    <string name="amount_in_words">Amount in Words</string>
    <string name="amount_left">Amount Left</string>
    <string name="analytics">Analytics</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Cosmossoft</string>
    <string name="app_title">MANTRA-MFS100-TEST</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="assist">Assist</string>
    <string name="assist_logo">Paytm Logo</string>
    <string name="back">Back</string>
    <string name="back_aadhaar">Back Aadhaar</string>
    <string name="bad_req">Bad Request</string>
    <string name="bal_rrn">Bal RRN</string>
    <string name="balance">BALANCE:</string>
    <string name="balance_amount">Balance amount</string>
    <string name="balance_enq">Balance Enquiry</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="balance_inquiry">Balance inquiry</string>
    <string name="balance_nenquiry">Balance\10Enquiry</string>
    <string name="balance_rrn">Balance RRN</string>
    <string name="bank_1_limit">Bank 1 Limit</string>
    <string name="bank_2_limit">Bank 2 Limit</string>
    <string name="bank_3_limit">Bank 3 Limit</string>
    <string name="bank_iin">Bank IIN</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_rrn">Bank RRN</string>
    <string name="bbps">BBPS</string>
    <string name="bc_share">BC SHARE:</string>
    <string name="beneficiary_id">Beneficiary ID</string>
    <string name="beneficiary_name">Beneficiary Name</string>
    <string name="bill_details">Bill Details</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branch_name">Branch Name</string>
    <string name="bravo">Bravo</string>
    <string name="browse_plan">Browse Plan</string>
    <string name="ca_number">CA Number</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_btn">Cancel</string>
    <string name="capture">Capture</string>
    <string name="capture_fingerprint">Capture Fingerprint</string>
    <string name="card_activation">Card Activation</string>
    <string name="card_number">Card Number</string>
    <string name="card_type">Card Type</string>
    <string name="card_type__">Card Type</string>
    <string name="cash_deposit">Cash Deposit</string>
    <string name="cash_withdraw">Cash Withdraw</string>
    <string name="cash_withdrawal">Cash Withdrawal</string>
    <string name="categories">Categories</string>
    <string name="category">Category</string>
    <string name="change_password">Change Password</string>
    <string name="change_pin">Change Pin</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="charges">Charges</string>
    <string name="charges_for_settlement_is_rs_10_for_imps_neft">*Note:-* ~*AEPS + mATM + settlement Payout Will be available 24 hours. *Charges for settlement are Rs.8 for IMPS. *No settlement to be done on bank Holiday &amp; holiday declared by RBI on NEFT (Transaction charges are inclusive of GST)```</string>
    <string name="check_details">Check Details</string>
    <string name="check_status">Check Status</string>
    <string name="chip_text">Chip text</string>
    <string name="circle">Circle</string>
    <string name="claim_refund">Claim Refund</string>
    <string name="clear">Clear</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="closing_balance">Closing Balance</string>
    <string name="commamt">Comm.</string>
    <string name="commission">Commission</string>
    <string name="commission_amount">Commission amount</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_account_no">Confirm Account no</string>
    <string name="confirm_account_number">Confirm account number</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="date_time">Date-Time</string>
    <string name="dmt">DMT</string>
    <string name="eight_">8</string>
    <string name="five_">5</string>
    <string name="four_">4</string>
    <string name="ifsc">IFSC</string>
    <string name="micro_atm">Micro ATM</string>
    <string name="mobile_no">MOBILE NO</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="name">Name</string>
    <string name="nine_">9</string>
    <string name="no_comm">no comm.</string>
    <string name="one_">1</string>
    <string name="op_id">OP ID :</string>
    <string name="op_id__">OP ID</string>
    <string name="op_name">OP Name</string>
    <string name="operator">Operator</string>
    <string name="payout">Payout</string>
    <string name="point_">.</string>
    <string name="recharge">Recharge</string>
    <string name="seven_">7</string>
    <string name="status">Status</string>
    <string name="three_">3</string>
    <string name="to">To</string>
    <string name="todo">TODO</string>
    <string name="two_">2</string>
    <string name="txn_id">TXN ID</string>
    <string name="update">Update</string>
    <string name="user_mobile_">User Mobile :</string>
    <string name="verify">Verify</string>
    <string name="zero_">0</string>
</resources>