<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:tag="layout/analytic_design_layout_0" android:background="#e6e6e6" android:visibility="visible" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" android:layout_marginStart="4dp" android:layout_marginEnd="4dp" app:cardCornerRadius="2dp" app:cardElevation="5dp" app:contentPadding="10dp">
        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <RelativeLayout android:id="@+id/TopSectionAnalytic" android:layout_width="match_parent" android:layout_height="wrap_content">
                <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticAmount" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/amount" android:textAlignment="center" android:layout_alignParentStart="true"/>
                <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticAmountStatus" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/status" android:layout_centerHorizontal="true"/>
                <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticAmountLeft" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/amount_left" android:textAlignment="textEnd" android:layout_alignParentEnd="true"/>
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5sp" android:layout_marginBottom="5sp" android:layout_below="@+id/TopSectionAnalytic" android:layout_alignParentStart="true" android:layout_marginVertical="5sp">
                <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <ImageView android:id="@+id/AnalyticLogo" android:tag="binding_4" android:layout_width="55sp" android:layout_height="55sp" android:src="@mipmap/ic_launcher" android:contentDescription="@string/todo"/>
                    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:layout_width="wrap_content" android:layout_height="match_parent" android:hint="@string/to" android:layout_marginEnd="5sp"/>
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticMN" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/mobile_no" android:textAlignment="center"/>
                    </LinearLayout>
                    <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticTxnID" android:tag="binding_6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/txn_id"/>
                    <com.google.android.material.button.MaterialButton android:textSize="@dimen/_8sdp" android:id="@+id/updateButton" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0dp" android:minHeight="0dp" android:text="@string/update" android:textAllCaps="false" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/TopSectionAnalytic" android:layout_alignParentEnd="true">
                <LinearLayout android:gravity="end" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <LinearLayout android:layout_gravity="end" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/operator_text" android:layout_width="match_parent" android:layout_height="0dp" android:hint="@string/operator" android:layout_weight="1" android:textAlignment="viewEnd"/>
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticOperator" android:tag="binding_7" android:layout_width="match_parent" android:layout_height="0dp" android:hint="@string/op_name" android:layout_weight="1" android:textAlignment="viewEnd"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:layout_width="wrap_content" android:layout_height="match_parent" android:hint="@string/op_id" android:layout_marginEnd="5sp"/>
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticOPID" android:tag="binding_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/op_id__" android:textAlignment="viewEnd"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:layout_width="wrap_content" android:layout_height="match_parent" android:hint="@string/user_mobile_" android:textAlignment="viewEnd" android:layout_marginEnd="5sp"/>
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticUserMobile" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/mobile_number" android:textAlignment="viewEnd"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:layout_width="wrap_content" android:layout_height="match_parent" android:hint="@string/commamt" android:textAlignment="viewEnd" android:layout_marginEnd="5sp"/>
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticUserCommissionAmount" android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/no_comm" android:textAlignment="viewEnd"/>
                    </LinearLayout>
                    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="match_parent">
                        <TextView android:textSize="12sp" android:textColor="#8e8e8e" android:id="@+id/AnalyticDateTime" android:tag="binding_11" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/date_time" android:textAlignment="viewEnd"/>
                        <com.google.android.material.button.MaterialButton android:textSize="@dimen/_8sdp" android:id="@+id/check_details" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0dp" android:minHeight="0dp" android:text="@string/check_details" android:textAllCaps="false" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
