<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/bottom_sheet_transaction_type_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:id="@+id/optionsCard" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/white">
        <RelativeLayout android:id="@+id/topSectionStuff" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="5dp">
            <ImageView android:id="@+id/cancel_image" android:padding="5dp" android:layout_width="35dp" android:layout_height="35dp" android:src="@drawable/ic_baseline_close_24" android:contentDescription="@string/todo"/>
            <TextView android:textSize="20sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/category" android:layout_centerVertical="true" android:layout_marginStart="5dp" android:layout_toEndOf="@+id/cancel_image"/>
            <TextView android:textSize="18sp" android:textColor="@color/iconColor" android:id="@+id/clear_text" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/clear" android:layout_centerVertical="true" android:layout_marginEnd="8dp" android:layout_alignParentEnd="true"/>
            <View android:id="@+id/divider3" android:background="?android:attr/listDivider" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginTop="2dp" android:layout_below="@+id/clear_text"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView android:id="@+id/optionsCardAnother" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_below="@+id/optionsCard" app:cardBackgroundColor="@color/white">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <CheckBox android:textSize="18sp" android:id="@+id/rechargeCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/recharge" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/bbpsCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/bbps" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/aepsCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/ae_ps" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/dmtCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/dmt" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/microatmCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/micro_atm" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/addFundCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/add_fund" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <CheckBox android:textSize="18sp" android:id="@+id/payoutCheck" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="5dp" android:layout_marginRight="10dp" android:button="@null" android:text="@string/payout" android:drawableEnd="?android:attr/listChoiceIndicatorMultiple" android:layout_marginHorizontal="10dp"/>
            <Button android:id="@+id/applyFilter" android:paddingTop="18dp" android:paddingBottom="18dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="-8dp" android:text="@string/apply" android:paddingVertical="18dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
