<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:tag="layout/payout_list_layout_0" android:background="@color/screenBackground" android:layout_width="match_parent" android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView android:id="@+id/infoSection" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:cardCornerRadius="4dp" app:cardElevation="3dp" app:contentPadding="4sp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:id="@+id/name" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:hint="@string/name" android:fontFamily="@font/sagnika"/>
            <TextView android:id="@+id/bank_name" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:hint="@string/bank_name" android:fontFamily="@font/sagnika"/>
            <TextView android:id="@+id/acc_number" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:hint="@string/account_number" android:fontFamily="@font/sagnika"/>
            <TextView android:id="@+id/ifsc_code" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/_5sdp" android:hint="@string/ifsc" android:fontFamily="@font/sagnika"/>
            <com.google.android.material.button.MaterialButton android:textSize="@dimen/_8sdp" android:id="@+id/verifyAccount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="0dp" android:minHeight="0dp" android:text="@string/verify" style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
